Tue Oct 15 18:02:37 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltInternals.h libxslt/xsltutils.[ch]: added the
	  possibility to register a transformation context specific
	  error handler, with xsltSetTransformErrorFunc() and provided
	  a new routine xsltTransformError() to handle contextual errors,
	  this should fix #94435
	* libxslt/*.c: modified all the code to use the context specific
	  error handling, as a result xsltPrintErrorContext() is not called
	  anymore except internally from xsltTransformError()

Tue Oct 15 14:52:23 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: closing #94933, any error will make
	  the transformation abort with  no result.
	* tests/reports/tst-1.err tests/reports/tst-1.out 
	  tests/reports/undefvar.err: this changed the regression tests
	  output.
	* tests/exslt/date/difference.1.out tests/exslt/date/seconds.1.out:
	  updated the result accordingly to the fixes done last month.
	* libxslt/namespaces.c: make sure to avoid duplicate namespace
	  declarations in the result trees. May fix #93692 but it's unclear.

Tue Oct 15 12:45:42 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: added a --path option to provide the
	  enhancement requested by #79638, first cut at it, untested
	  yet.

Tue Oct 15 13:02:40 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: seems the media-type attribute wasn't
	  always correctly handled

Mon Oct 14 09:27:01 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: added URI escaping in case the resource 
	  target computation of exslt:element failed. Should fix #81837

Tue Oct 15 12:42:25 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* README: updated the contact informations

Tue Oct 15 11:40:19 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed the behaviour of node() patter which
	  didn't patch the one defined in XPath :-( . Closes bug #95793