@@ -95,6 +95,8 @@ EXTRA_DIST = \
     bug-90.out bug-90.xsl \
     bug-91.out bug-91.xsl \
     bug-92.out bug-92.xsl \
+    bug-93.out bug-93.xsl \
+    bug-93-inc.out bug-93-inc.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
