@@ -1,0 +1,3 @@
+<font size="+1">
+foo
+    </font>
