@@ -1,0 +1,3 @@
+<font size="+2">
+foo
+    </font>
