@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
+  <xsl:import href="bug-93-inc.xsl"/>
+  <xsl:attribute-set name="foo-attribs">
+    <xsl:attribute name="size">+2</xsl:attribute>
+  </xsl:attribute-set>
+</xsl:stylesheet>
